--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
+    "http": "0.0.0",
     "include-all": "^1.0.0",
+    "ip": "^1.1.5",
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9"
